--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "next-api-middleware": "^3.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.7.1"
+    "react-router-dom": "^7.7.1",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@iarna/toml": "^2.2.5",
