Implement schema versioning with Prisma migrations, add new database models for badges and subscriptions, enhance README with schema versioning instructions, and introduce utility functions for managing schema versions. Update various components to support new badge functionalities and improve overall application structure.

--- a/package.json
+++ b/package.json
@@ -34,6 +34,19 @@
     "db:stop": "mysqladmin shutdown",
     "-----> Prisma <-----": "",
     "prisma": "npx prisma",
+    "-----> Schema Versioning <-----": "",
+    "migrate:dev": "npx prisma migrate dev",
+    "migrate:deploy": "npx prisma migrate deploy",
+    "migrate:status": "npx prisma migrate status",
+    "migrate:reset": "npx prisma migrate reset",
+    "migrate:resolve": "npx prisma migrate resolve",
+    "db:seed": "npx prisma db seed",
+    "db:studio": "npx prisma studio",
+    "schema:version": "node utils/schemaVersioning.js current",
+    "schema:history": "node utils/schemaVersioning.js history",
+    "schema:health": "node utils/schemaVersioning.js health",
+    "schema:init": "node utils/schemaVersioning.js init",
+    "-----> Legacy Commands <-----": "",
     "prisma:push": "npx prisma db push",
     "prisma:pull": "npx prisma db pull",
     "-----> Reserved Scripts <-----": "",
