--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.12.0",
+    "@shopify/app-bridge-react": "^4.2.2",
     "@shopify/polaris": "^13.9.5",
     "@shopify/shopify-api": "^11.14.1",
     "cryptr": "^6.3.0",
@@ -54,6 +55,7 @@
   },
   "devDependencies": {
     "@iarna/toml": "^2.2.5",
+    "@shopify/app-bridge-types": "^0.3.0",
     "@shopify/app-bridge-ui-types": "^0.2.1",
     "@shopify/cli-kit": "^3.82.1",
     "dotenv": "^17.2.0",
