--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.12.0",
+    "@shopify/app-bridge-react": "^4.2.2",
     "@shopify/polaris": "^13.9.5",
     "@shopify/shopify-api": "^11.14.1",
     "cryptr": "^6.3.0",
