--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@shopify/app-bridge-react": "^4.2.2",
     "@shopify/polaris": "^13.9.5",
     "@shopify/shopify-api": "^11.14.1",
+    "axios": "^1.11.0",
     "cryptr": "^6.3.0",
     "lucide-react": "^0.534.0",
     "next": "15.4.2",
