--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "prisma:push": "npx prisma db push",
     "prisma:pull": "npx prisma db pull",
     "-----> Reserved Scripts <-----": "",
-    "prepare": "npx prisma generate"
+    "prepare": "npx prisma generate",
+    "-----> Redis <-----": "",
+    "test:redis": "node scripts/test-redis.js"
   },
   "dependencies": {
     "@prisma/client": "^6.12.0",
@@ -46,6 +48,7 @@
     "@shopify/shopify-api": "^11.14.1",
     "axios": "^1.11.0",
     "cryptr": "^6.3.0",
+    "ioredis": "^5.7.0",
     "lucide-react": "^0.534.0",
     "next": "15.4.2",
     "next-api-middleware": "^3.0.0",
@@ -59,6 +62,7 @@
     "@shopify/app-bridge-types": "^0.3.0",
     "@shopify/app-bridge-ui-types": "^0.2.1",
     "@shopify/cli-kit": "^3.82.1",
+    "@types/ioredis": "^4.28.10",
     "dotenv": "^17.2.0",
     "ngrok": "^5.0.0-beta.2",
     "npm-check-updates": "^18.0.1",
