--- a/package.json
+++ b/package.json
@@ -55,7 +55,11 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.7.1",
-    "zustand": "^5.0.8"
+    "zustand": "^5.0.8",
+    "typescript": "^5.8.3",
+    "@types/react": "^19.1.12",
+    "@types/react-dom": "^19.1.9",
+    "@types/node": "^24.3.0"
   },
   "devDependencies": {
     "@iarna/toml": "^2.2.5",
