--- a/package.json
+++ b/package.json
@@ -56,6 +56,9 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.7.1",
     "zustand": "^5.0.8",
+    "typescript": "^5.8.3",
+    "@types/react": "^19.1.12",
+    "@types/react-dom": "^19.1.9",
     "@types/node": "^24.3.0"
   },
   "devDependencies": {
@@ -64,6 +67,9 @@
     "@shopify/app-bridge-ui-types": "^0.2.1",
     "@shopify/cli-kit": "^3.82.1",
     "@types/ioredis": "^4.28.10",
+    "@types/node": "^24.3.0",
+    "@types/react": "^19.1.12",
+    "@types/react-dom": "^19.1.9",
     "dotenv": "^17.2.0",
     "ngrok": "^5.0.0-beta.2",
     "npm-check-updates": "^18.0.1",
