--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "2025.07.29",
   "type": "module",
   "author": {
-    "name": "logesh & dinesh & Aswin",
+    "name": "main(logesh) & support( dinesh & Aswin)",
     "url": "https://cartrabbit.com"
   },
   "scripts": {
@@ -59,9 +59,6 @@
     "@shopify/app-bridge-ui-types": "^0.2.1",
     "@shopify/cli-kit": "^3.82.1",
     "@types/ioredis": "^4.28.10",
-    "@types/node": "^24.3.1",
-    "@types/react": "^19.1.12",
-    "@types/react-dom": "^19.1.9",
     "dotenv": "^17.2.0",
     "ngrok": "^5.0.0-beta.2",
     "npm-check-updates": "^18.0.1",
