--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "@shopify/app-bridge-react": "^4.2.2",
     "@shopify/polaris": "^13.9.5",
     "@shopify/shopify-api": "^11.14.1",
+    "@types/node": "^24.3.0",
+    "@types/react-dom": "^19.1.9",
     "axios": "^1.11.0",
     "cryptr": "^6.3.0",
     "ioredis": "^5.7.0",
@@ -51,11 +53,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.7.1",
-    "zustand": "^5.0.8",
     "typescript": "^5.8.3",
-    "@types/react": "^19.1.12",
-    "@types/react-dom": "^19.1.9",
-    "@types/node": "^24.3.0"
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@iarna/toml": "^2.2.5",
@@ -64,7 +63,7 @@
     "@shopify/cli-kit": "^3.82.1",
     "@types/ioredis": "^4.28.10",
     "@types/node": "^24.3.0",
-    "@types/react": "^19.1.12",
+    "@types/react": "^18.0.1",
     "@types/react-dom": "^19.1.9",
     "dotenv": "^17.2.0",
     "ngrok": "^5.0.0-beta.2",
