--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "version": "2025.07.29",
   "type": "module",
   "author": {
-    "name": "main(logesh) & support( dinesh & Aswin)",
-    "url": "https://cartrabbit.com"
+    "name": "Harshdeep Singh Hura",
+    "url": "https://harshdeephura.com"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/kinngh/shopify-nextjs-prisma-app.git"
   },
   "scripts": {
     "dev": "next dev",
@@ -42,7 +46,7 @@
     "@shopify/app-bridge-react": "^4.2.2",
     "@shopify/polaris": "^13.9.5",
     "@shopify/shopify-api": "^11.14.1",
-    "@types/node": "^24.3.0",
+    "@types/react": "^19.1.12",
     "@types/react-dom": "^19.1.9",
     "axios": "^1.11.0",
     "cryptr": "^6.3.0",
@@ -54,7 +58,8 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.7.1",
     "typescript": "^5.8.3",
-    "zustand": "^5.0.8"
+    "zustand": "^5.0.8",
+    "@types/node": "^20.8.10"
   },
   "devDependencies": {
     "@iarna/toml": "^2.2.5",
@@ -62,8 +67,8 @@
     "@shopify/app-bridge-ui-types": "^0.2.1",
     "@shopify/cli-kit": "^3.82.1",
     "@types/ioredis": "^4.28.10",
-    "@types/node": "^24.3.0",
-    "@types/react": "^18.0.1",
+    "@types/node": "^20.8.10",
+    "@types/react": "^19.1.12",
     "@types/react-dom": "^19.1.9",
     "dotenv": "^17.2.0",
     "ngrok": "^5.0.0-beta.2",
