--- a/package.json
+++ b/package.json
@@ -63,6 +63,9 @@
     "@shopify/app-bridge-ui-types": "^0.2.1",
     "@shopify/cli-kit": "^3.82.1",
     "@types/ioredis": "^4.28.10",
+    "@types/node": "^20.17.9",
+    "@types/react": "^18.3.17",
+    "@types/react-dom": "^18.3.5",
     "dotenv": "^17.2.0",
     "ngrok": "^5.0.0-beta.2",
     "npm-check-updates": "^18.0.1",
