--- a/package.json
+++ b/package.json
@@ -55,7 +55,10 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.7.1",
-    "zustand": "^5.0.8"
+    "zustand": "^5.0.8",
+    "@types/node": "^20.17.9",
+    "@types/react": "^18.3.17",
+    "@types/react-dom": "^18.3.5"
   },
   "devDependencies": {
     "@iarna/toml": "^2.2.5",
