--- a/package.json
+++ b/package.json
@@ -46,8 +46,6 @@
     "@shopify/app-bridge-react": "^4.2.2",
     "@shopify/polaris": "^13.9.5",
     "@shopify/shopify-api": "^11.14.1",
-    "@types/react": "^19.1.12",
-    "@types/react-dom": "^19.1.9",
     "axios": "^1.11.0",
     "cryptr": "^6.3.0",
     "ioredis": "^5.7.0",
@@ -57,9 +55,10 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.7.1",
-    "typescript": "^5.8.3",
     "zustand": "^5.0.8",
-    "@types/node": "^20.8.10"
+    "@types/node": "^20.17.9",
+    "@types/react": "^18.3.17",
+    "@types/react-dom": "^18.3.5"
   },
   "devDependencies": {
     "@iarna/toml": "^2.2.5",
@@ -67,9 +66,6 @@
     "@shopify/app-bridge-ui-types": "^0.2.1",
     "@shopify/cli-kit": "^3.82.1",
     "@types/ioredis": "^4.28.10",
-    "@types/node": "^20.8.10",
-    "@types/react": "^19.1.12",
-    "@types/react-dom": "^19.1.9",
     "dotenv": "^17.2.0",
     "ngrok": "^5.0.0-beta.2",
     "npm-check-updates": "^18.0.1",
